Fix gap between itens

--- a/react/shelf.css
+++ b/react/shelf.css
@@ -1,6 +1,9 @@
 .container {
 }
 
+.slider-container {
+}
+
 .title {
 }
 
@@ -16,14 +19,27 @@
 }
 
 .arrowLeft {
-  left: 0;
 }
 
 .arrowRight {
-  right: 0;
 }
 
 .dot {
   height: 10px;
   width: 10px;
+}
+
+.slideContainer {
+  @media only screen and (max-width: 599px) {
+    max-width: 600px;
+  }
+  @media only screen and (min-width: 600px and max-width: 899px) {
+    max-width: 900px;
+  }
+  @media only screen and (min-width: 900px and max-width: 1299px) {
+    max-width: 1300px;
+  }
+  @media only screen and (min-width: 1300px) {
+    max-width: 1300px;
+  }
 }
